@@ -32,19 +32,16 @@ test_bad_name('', 'empty');
 test_bad_name('uuu www', 'space');
 test_bad_name('.abc', 'dot at the beginning'); 
 test_bad_name('../uuu', 'parent directory at the beginning');
-TODO: {
-	local $TODO = 'bug';
-	test_bad_name('uuu/www', 'slash');
-	test_bad_name('uuu/../www', 'parent directory at the middle');
-	test_bad_name('xxx/..', 'parent directory at the end');
-	test_bad_name('uUu', 'big letter');
-	test_bad_name('uuu*www', 'asterisk');
-	test_bad_name('uuu\www', 'backslash');
-	test_bad_name('%s', 'percent');
-	test_bad_name('name!', 'exclamation mark');
-	test_bad_name('xyz?', 'question mark');
-	test_bad_name('xyz|uuu', 'pipe');
-	test_bad_name('qw;', 'semicolon');
-	test_bad_name('#$TY(', 'garbage characters');
-}
+test_bad_name('uuu/www', 'slash');
+test_bad_name('uuu/../www', 'parent directory at the middle');
+test_bad_name('xxx/..', 'parent directory at the end');
+test_bad_name('uUu', 'big letter');
+test_bad_name('uuu*www', 'asterisk');
+test_bad_name('uuu\www', 'backslash');
+test_bad_name('%s', 'percent');
+test_bad_name('name!', 'exclamation mark');
+test_bad_name('xyz?', 'question mark');
+test_bad_name('xyz|uuu', 'pipe');
+test_bad_name('qw;', 'semicolon');
+test_bad_name('#$TY(', 'garbage characters');
 
