@@ -11,6 +11,9 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
       - Prefer any number of (Pre-)Depends over 1 Recommends.
       - Prefer 2 Recommends over 1 Suggests.
       - Apply penalties for non-first relations. (Closes: #772558)
+    - 'snapshot save':
+      - Accept only snapshot names made of whitelist characters (lowercase
+        latin letters, digits, dash, underscore).
   * lib:
     - config:
       - New option 'cupt::resolver::score::version-factor::common'.
